--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,16 @@
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+ "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
 
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>RegistrationApplication</display-name>
 
-  <!-- context-param MUST come BEFORE filters according to 2.3 DTD -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>/WEB-INF/applicationContext.xml</param-value>
   </context-param>
 
-  <!-- Struts2 Filter -->
   <filter>
     <filter-name>struts2</filter-name>
     <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
@@ -23,20 +21,38 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-  <!-- listener must come AFTER filter-mapping (per DTD order) -->
   <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+      <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
 
-  <!-- (optional) welcome file list before error-page -->
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+  <!-- OPTIONAL: keep DWR enabled for future use -->
+  <servlet>
+      <servlet-name>dwr-invoker</servlet-name>
+      <servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
 
-  <!-- error pages -->
-  <error-page>
-    <exception-type>java.lang.Exception</exception-type>
-    <location>/WEB-INF/jsp/error.jsp</location>
-  </error-page>
+      <init-param>
+          <param-name>debug</param-name>
+          <param-value>true</param-value>
+      </init-param>
+
+      <init-param>
+          <param-name>allowScriptTagRemoting</param-name>
+          <param-value>true</param-value>
+      </init-param>
+
+      <init-param>
+          <param-name>config</param-name>
+          <param-value>/WEB-INF/dwr.xml</param-value>
+      </init-param>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>dwr-invoker</servlet-name>
+      <url-pattern>/dwr/*</url-pattern>
+  </servlet-mapping>
+
+  <welcome-file-list>
+    <welcome-file>index1.jsp</welcome-file>
+  </welcome-file-list>
 
 </web-app>
