--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,61 @@
     <artifactId>ezmorph</artifactId>
     <version>1.0.6</version>
 </dependency>
+<!-- FOR JASPER REPORTS -->
+<!-- JasperReports main dependency -->
+<dependency>
+    <groupId>net.sf.jasperreports</groupId>
+    <artifactId>jasperreports</artifactId>
+    <version>5.1.0</version>
+</dependency>
+
+
+<!-- For exporting PDF -->
+<dependency>
+    <groupId>com.lowagie</groupId>
+    <artifactId>itext</artifactId>
+    <version>2.1.7</version>
+</dependency>
+
+<!-- For XLS / XLSX exports -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>5.2.4</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.4</version>
+</dependency>
+
+<!-- Needed for functions inside Jasper -->
+<dependency>
+    <groupId>org.codehaus.groovy</groupId>
+    <artifactId>groovy-all</artifactId>
+    <version>2.4.21</version>
+</dependency>
+
+<!-- Common libraries used internally -->
+<dependency>
+    <groupId>commons-digester</groupId>
+    <artifactId>commons-digester</artifactId>
+    <version>2.1</version>
+</dependency>
+
+<dependency>
+    <groupId>commons-beanutils</groupId>
+    <artifactId>commons-beanutils</artifactId>
+    <version>1.9.4</version>
+</dependency>
+
+<dependency>
+    <groupId>commons-collections</groupId>
+    <artifactId>commons-collections</artifactId>
+    <version>3.2.2</version>
+</dependency>
+<!-- END -->
 
 		<dependency>
 			<groupId>org.apache.struts</groupId>
